# Football_Journal

./: TECHNICAL_CONTEXT.md
.github/workflows/: trigger-ingestion.yml
app/: main.py  out.json  out.txt  pyproject.toml  worker.py
app/almebic/: env.py
app/almebic/versions/: 08b766467980_added_indexes_to_db.py  2cb3e37b0611_add_code_to_competition.py  86d0ad95fa42_added_unique_review_constraint.py  8b34fd94ac7e_make_username_optional.py  95657cf6332f_initial_mvp_schema.py  d55b82c57672_make_match_utc_date_timezone_aware.py  f13c2a9e7b44_add_perf_indexes_for_reviews_and_squads.py
app/api/: auth.py  index.py  matches.py  reviews.py  stats.py
app/core/: auth.py  config.py  database.py
app/models/: competition.py  match.py  player.py  review.py  review_like.py  review_player_tag.py  team.py  team_squad.py  user.py
app/schemas/: match.py  review.py
app/services/: api_football_data.py
app/services/ingestion/: competitions.py  ingestion.py  matches.py  squads.py  teams.py
app/utils/: validation.py
frontend/: guidelines.md  lint_output.txt  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/insights/: loading.tsx  page.tsx
frontend/app/matches/[id]/: MatchClient.tsx  loading.tsx  page.tsx
frontend/app/profile/[[...rest]]/: page.tsx
frontend/components/: DateSelector.tsx  FocusLevelSelector.tsx  InsightsFilter.tsx  MatchCard.tsx  MotmSelector.tsx  Navbar.tsx  ReviewCard.tsx
frontend/components/ui/: button.tsx  card.tsx  spinner.tsx
frontend/lib/: api.ts  utils.ts
